--- a/src/entities/products/components/ItemProduct_tpl/style/itemProduct.scss
+++ b/src/entities/products/components/ItemProduct_tpl/style/itemProduct.scss
@@ -120,6 +120,11 @@
         position: absolute;
         left: 0;
         top: 9px;
+        border-radius: 8px;
+        transition: all 300ms;
+        &:hover{
+            box-shadow: 0 0 1px black;
+        }
         svg{
             max-width: 100%;
             height: 100%;
@@ -179,6 +184,11 @@
         width: 32px;
         height: 32px;
         cursor: pointer;
+        transition: all 300ms;
+        border-radius: 8px;
+        &:hover{
+            box-shadow: 0 0 1px black;
+        }
         svg{
             max-width: 100%;
             height: auto;
