--- a/src/shared/ui/Menu/style/menu.scss
+++ b/src/shared/ui/Menu/style/menu.scss
@@ -5,6 +5,7 @@
         gap: 0 30px;
     }
     &__item{
+        cursor: pointer;
         &-row{
             display: flex;
             align-items: center;
