--- a/src/shared/ui/ButtonMain/style/buttonMain.css
+++ b/src/shared/ui/ButtonMain/style/buttonMain.css
@@ -4,11 +4,21 @@
   padding: 18px;
   min-width: 325px;
 }
+.button--main.small {
+  min-width: 245px;
+}
 .button--main__row {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 0 50px;
+}
+.button--main__row.left {
+  flex-direction: row-reverse !important;
+  gap: 0 21px;
+}
+.button--main__row.left .button--main__icon {
+  transform: rotate(-180deg);
 }
 .button--main__text {
   font-family: "Inter";
@@ -20,5 +30,6 @@
   color: #FFFFFF;
 }
 .button--main__icon {
+  transition: all 300ms;
   display: flex;
 }/*# sourceMappingURL=buttonMain.css.map */
