--- a/src/shared/ui/ButtonMain/style/buttonMain.scss
+++ b/src/shared/ui/ButtonMain/style/buttonMain.scss
@@ -1,13 +1,26 @@
 .button--main{
+     &.small{
+        min-width: 245px; 
+    }
     background: #9DD558;
     border-radius: 18px;
     padding: 18px;
     min-width:325px;
+   
     &__row{
         display: flex;
         align-items: center;
         justify-content: center;
         gap: 0 50px;
+        &.left{
+            flex-direction: row-reverse!important;
+            gap: 0 21px;
+            .button--main{
+                &__icon{
+                    transform: rotate(-180deg);
+                }
+            }
+        }
     }
     &__text{
         font-family: 'Inter';
@@ -19,6 +32,7 @@
         color: #FFFFFF;
     }
     &__icon{
+        transition: all 300ms;
         display: flex;
     }
 }
